copied stuf from another project

--- a/DimseLibrary/DimseLibrary.csproj
+++ b/DimseLibrary/DimseLibrary.csproj
@@ -95,9 +95,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Deltager.cs" />
+    <Compile Include="Dimser.cs" />
+    <Compile Include="Project.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel.cs" />
   </ItemGroup>
